# FishID

./: .replit  main.py  pyproject.toml  run.sh
templates/: index.html
